# injectpy

./: .pre-commit-config.yaml  README.md  SKILL.md  demo_describe.py  pyproject.toml
injectable/: __init__.py  binding.py  container.py  exceptions.py  metadata.py  module.py  scanner.py  scope.py  type.py
injectable/decorator/: __init__.py  lifecycle.py  scope.py
providify/: __init__.py  binding.py  container.py  descriptor.py  exceptions.py  metadata.py  resolution.py  scanner.py  scope.py  type.py
providify/decorator/: __init__.py  module.py  scope.py
tests/: conftest.py  pyproject.toml  test_async.py  test_binding.py  test_circular.py  test_configuration.py  test_container.py  test_decorators.py  test_describe.py  test_inject.py  test_lazy.py  test_lifecycle.py  test_localns_cache.py  test_scanner.py  test_scopes.py  test_warmup.py
