[tool.poetry]
name = "injectable-tests"
version = "0.1.0"
description = "Test suite for the injectable DI container library"
authors = []
# package-mode = false tells Poetry this is not a publishable package —
# just a project with dependencies. Requires Poetry >= 1.8.0.
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
# Path dependency — makes "from injectable.container import ..." work
# without needing pythonpath hacks. Poetry installs the parent in editable mode.
injectable = {path = "..", develop = true}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# asyncio_mode="auto" — every async test function is collected as a coroutine
# test without needing @pytest.mark.asyncio on each one.
asyncio_mode = "auto"

# Run pytest from this directory (tests/) — discover test files here.
testpaths = ["."]